deploy/internal/apps/headlamp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: headlamp
  labels:
    app: headlamp
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: headlamp
