deploy/internal/apps/headlamp/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: https://headlamp.internal.ticklethepanda.co.uk
    gethomepage.dev/name: Headlamp
    gethomepage.dev/group: Administration
    gethomepage.dev/icon: headlamp
    gethomepage.dev/description: Kubernetes dashboard
    gethomepage.dev/pod-selector: app=headlamp
spec:
  entryPoints:
    - int-web-secure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`headlamp.internal.ticklethepanda.co.uk`)
      middlewares:
        - name: tinyauth
          namespace: tinyauth
      services:
        - name: headlamp
          namespace: headlamp
          port: 80
